--- a/src/app/courses/courses.component.html
+++ b/src/app/courses/courses.component.html
@@ -7,9 +7,22 @@
             </mat-card-title>
         </mat-card-header>
         <mat-card-content>
-
-            <!-- COURSES LIST -->
-
+          <mat-list>
+            <mat-list-item
+              *ngFor="let course of courses"
+              (click)="selectCourse(course)"
+            >
+              <h3 matLine>{{course.title | titlecase}}</h3>
+              <p matLine>{{course.description}}</p>
+              <button
+                mat-icon-button
+                color="warn"
+                (click)="deleteCourse(course.id); $event.stopImmediatePropagation()"
+              >
+                <mat-icon>delete</mat-icon>
+              </button>
+            </mat-list-item>
+          </mat-list>
         </mat-card-content>
         </mat-card>
     </div>
@@ -22,8 +35,8 @@
                 </mat-card-title>
             </mat-card-header>
             <mat-card-content>
-            
-            <!-- COURSE FORM -->
+
+            <pre>{{selectedCourse | json}}</pre>
 
             </mat-card-content>
             <mat-card-actions>
