--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,6 +3,15 @@
     <mat-card-title> Course Outline </mat-card-title>
   </mat-card-header>
   <mat-card-content>
-    <!-- LESSON LIST -->
+    <mat-list>
+      <mat-list-item
+        *ngFor="let lesson of courseLessons"
+        (click)="selectLesson(lesson)"
+      >
+        <h3 matLine>{{lesson.title | titlecase}}</h3>
+      </mat-list-item>
+    </mat-list>
+    <hr/>
+    <pre>{{selectedLesson | json}}</pre>
   </mat-card-content>
 </mat-card>
